@@ -2,23 +2,25 @@ package Game;
 
 import java.applet.Applet;
 import java.applet.AudioClip;
+import java.io.File;
 import java.net.URL;
 
 public class MusicDemo {
-
-		/*public static void main(String[] args){
+	public MusicDemo()
+	{
 		URL musicURL = null;
 		try{
-		musicURL = new URL("myMusic.wmv");
+			File f=new File("music/3.wav");
+			musicURL=f.toURL();
+			musicURL=new URL("myMusic.wmv");
 		}catch(Exception e){
-		e.printStackTrace();
+			
 		}
-	//	AudioClip ac = Applet.newAudioClip(musicURL); //得到一个播放音频的实例
-	//	ac.play();//播放一编
-		//ac.loop();//循环播放
-		//ac.stop();//停止
-		}
-		
+		AudioClip ac =Applet.newAudioClip(musicURL);
+		//ac.play();
+		ac.loop();
+		//ac.stop;
+	}
+	}
 
-*/
-}
+
